GNOME Bugzilla – Bug 419780
Launcher Properties contains a conflicting accelerator
Last modified: 2007-05-12 21:00:33 UTC
The bug has been opened on https://launchpad.net/bugs/93421 "Binary package hint: gnome-panel Description of the problem: The accelerator Alt-c is used on both the close button and the command text field inside launcher properties preventing one from closing launcher properties by pressing Alt-c. Steps to reproduce: 1. Press the right mouse button on the Firefox icon to the right of the System menu in the top panel. Choose Properties. 2. Notice how the Close button has an underlined C. Press Alt-c to trigger it. Expected results: Window to close. Actual results: Close button becomes focussed. Additional information: Repeatedly pressing Alt-c toggles focus between the command text field and the close button. In other circumstance (e.g. gnome-terminal -> Edit -> Current Profile... ) Alt-c will follow the expected behaviour. Version information: Ubuntu Feisty gnome-panel 2.18.0-0ubuntu1"
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
*** Bug 426000 has been marked as a duplicate of this bug. ***