[panel] Fix Command mnemonic in launcher editor

The mnemonic was different if the launcher was using a terminal or not.
This was introduced in http://bugzilla.gnome.org/show_bug.cgi?id=419780

http://bugzilla.gnome.org/show_bug.cgi?id=559180