gnome-panel/panel-ditem-editor.c
@@ -1159,7 +1159,7 @@ type_combo_changed (PanelDItemEditor *dialog)
 		}
 		break;
 	case PANEL_DITEM_EDITOR_TYPE_TERMINAL_APPLICATION:
-		text = _("_Command:");
+		text = _("Comm_and:");
 		if (dialog->priv->combo_setuped) {
 			panel_key_file_set_string (dialog->priv->key_file,
 						   "Type", "Application");
